--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,6 @@ body {
 	font-family: var(--font-family);
 	color: var(--text-color);
 	background-color: var(--background-color);
-	max-width: 40em;
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;
@@ -302,6 +301,23 @@ footer {
 @media (prefers-color-scheme: dark) {
 	.cvbox {
 		background: #333D29;
+	}
+}
+
+/* This solves the problem of the cv in small screens */
+@media (max-width: 660px) {
+	main{
+		max-width: 100%;
+	}
+	.cvcolumn {
+		max-width: 100vw;
+		overflow-x: auto;
+		overflow-y: visible;
+		white-space: nowrap;
+	}
+	.cvbox {
+		max-width: 75vw;
+		white-space: normal;
 	}
 }
 
