updated linkedin link

--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -39,7 +39,7 @@
                 <a href="https://www.github.com/rsomonte">
                     <img src="https://icon-library.com/images/github-icon-white/github-icon-white-6.jpg" alt="GitHub icon" style="height:3em; vertical-align: middle;">
                 </a>
-                <a href="https://www.linkedin.com/in/rodrigo-de-diego-de-somonte/">
+                <a href="https://www.linkedin.com/in/rsomonte/">
                     <img src="https://bit.ly/4eIqFwg" alt="LinkedIn icon" style="height: 2em; vertical-align: middle;">
                 </a>
             </div>
